--- a/study-of-webgl/index.html
+++ b/study-of-webgl/index.html
@@ -29,7 +29,7 @@
     <link rel="icon" type="image/png" href="./images/icon-192x192.png">
     <!-- style -->
     <link href="./styles/reset.min.css" rel="stylesheet">
-    <link href="./styles/index.css" rel="stylesheet">
+    <link href="./styles/index.min.css" rel="stylesheet">
     <title>Toshiya Marukubo | Study of WebGL</title>
   </head>
   <body>
@@ -45,7 +45,7 @@
           </div>
           <div class="description">
             <h2>Study of WebGL</h2>
-            <p>Created by Toshiya Marukubo.</p>
+            <p>Created by Toshiya Marukubo</p>
             <ul>
               <li>
                 <a href="https://toshiya-marukubo.github.io/">
@@ -261,7 +261,7 @@
           <div class="works">
             <div class="image">
               <a href="./works/blooming.html">
-                <img src="./images/blooming.png" loading="lazy" alt="blooming image" width="682" height="482">
+                <img class="progress" src="./images/blooming-dammy.png" data-src="./images/blooming.png" alt="blooming image" width="682" height="482">
                 <div class="overlay">
                   <span class="view">View</span>
                 </div>
@@ -277,7 +277,7 @@
           <div class="works">
             <div class="image">
               <a href="./works/rotation.html">
-                <img src="./images/rotation.png" loading="lazy" alt="rotation image" width="682" height="482">
+                <img class="progress" src="./images/rotation-dammy.png" data-src="./images/rotation.png" alt="rotation image" width="682" height="482">
                 <div class="overlay">
                   <span class="view">View</span>
                 </div>
@@ -293,7 +293,7 @@
           <div class="works">
             <div class="image">
               <a href="./works/castle.html">
-                <img src="./images/castle.png" loading="lazy" alt="castle image" width="682" height="482">
+                <img class="progress" src="./images/castle-dammy.png" data-src="./images/castle.png" alt="castle image" width="682" height="482">
                 <div class="overlay">
                   <span class="view">View</span>
                 </div>
@@ -309,7 +309,7 @@
           <div class="works">
             <div class="image">
               <a href="./works/137-5.html">
-                <img src="./images/137-5.png" loading="lazy" alt="137.5 image" width="682" height="482">
+                <img class="progress" src="./images/137-5-dammy.png" data-src="./images/137-5.png" alt="137.5 image" width="682" height="482">
                 <div class="overlay">
                   <span class="view">View</span>
                 </div>
@@ -330,12 +330,12 @@
         </div><!-- end footer-container -->
       </div><!-- end footer -->
     </div><!-- end body-container -->
-    <script defer src="./scripts/intersection-observer.js"></script>
+    <script defer src="./scripts/intersection-observer.min.js"></script>
     <script defer src="./scripts/three.min.js"></script>
-    <script defer src="./scripts/fullscreen.js"></script>
-    <script defer src="./scripts/loading.js"></script>
-    <script defer src="./scripts/cellautomaton.js"></script>
-    <script defer src="./scripts/scroll.js"></script>
-    <script defer src="./scripts/index.js"></script>
+    <script defer src="./scripts/fullscreen.min.js"></script>
+    <script defer src="./scripts/loading.min.js"></script>
+    <script defer src="./scripts/cellautomaton.min.js"></script>
+    <script defer src="./scripts/scroll.min.js"></script>
+    <script defer src="./scripts/index.min.js"></script>
   </body>
 </html>
