--- a/study-of-webgl/works/blooming.html
+++ b/study-of-webgl/works/blooming.html
@@ -29,8 +29,8 @@
     <link rel="icon" type="image/png" href="../images/icon-192x192.png">
     <!-- style -->
     <link href="../styles/reset.min.css" rel="stylesheet">
-    <link href="../styles/index.css" rel="stylesheet">
-    <link href="../styles/works.css" rel="stylesheet">
+    <link href="../styles/index.min.css" rel="stylesheet">
+    <link href="../styles/works.min.css" rel="stylesheet">
     <title>Toshiya Marukubo | Study of WebGL | Blooming</title>
   </head>
   <body>
@@ -57,14 +57,18 @@
           <div class="what" aria-live="assertive">
             <h3>What's this?</h3>
             <p>
-              It's a particle animation.<br>
-              I expressed blooming.
+              It's a particle animation. I expressed blooming.
             </p>
             <h4>References</h4>
             <ol>
               <li>
                 <a href="https://iquilezles.org/www/articles/palettes/palettes.htm" target="_blank" rel="noopener">
                   Inigo Quilez | articles | palettes - 1999 - How to make color.
+                </a>
+              </li>
+              <li>
+                <a href="https://qiita.com/uma6661/items/20accc9b5fb9845fc73a" target="_blank" rel="noopener">
+                  Qiita | Three.jsのGPGPUのサンプルが難しすぎるから解体して勉強してみる - How to make points circle.
                 </a>
               </li>
             </ol>
@@ -108,9 +112,9 @@
       </div><!-- end header -->
     </div><!-- end body-container -->
     <script defer src="../scripts/three.min.js"></script>
-    <script defer src="../scripts/loading.js"></script>
-    <script defer src="../scripts/fullscreen.js"></script>
-    <script defer src="../scripts/popup.js"></script>
-    <script defer src="../scripts/blooming.js"></script>
+    <script defer src="../scripts/loading.min.js"></script>
+    <script defer src="../scripts/fullscreen.min.js"></script>
+    <script defer src="../scripts/popup.min.js"></script>
+    <script defer src="../scripts/blooming.min.js"></script>
   </body>
 </html>
