--- a/study-of-webgl/works/rotation.html
+++ b/study-of-webgl/works/rotation.html
@@ -29,8 +29,8 @@
     <link rel="icon" type="image/png" href="../images/icon-192x192.png">
     <!-- style -->
     <link href="../styles/reset.min.css" rel="stylesheet">
-    <link href="../styles/index.css" rel="stylesheet">
-    <link href="../styles/works.css" rel="stylesheet">
+    <link href="../styles/index.min.css" rel="stylesheet">
+    <link href="../styles/works.min.css" rel="stylesheet">
     <title>Toshiya Marukubo | Study of WebGL | Rotation</title>
   </head>
   <body>
@@ -56,7 +56,7 @@
           </div><!-- end question -->
           <div class="what" aria-live="assertive">
             <h3>What's this?</h3>
-            <p>Please check spheres size.</p>
+            <p>It's a funny. Please check spheres size.</p>
             <h4>References</h4>
             <ol>
               <li>
@@ -105,9 +105,9 @@
       </div><!-- end header -->
     </div><!-- end body-container -->
     <script defer src="../scripts/three.min.js"></script>
-    <script defer src="../scripts/loading.js"></script>
-    <script defer src="../scripts/fullscreen.js"></script>
-    <script defer src="../scripts/popup.js"></script>
-    <script defer src="../scripts/rotation.js"></script>
+    <script defer src="../scripts/loading.min.js"></script>
+    <script defer src="../scripts/fullscreen.min.js"></script>
+    <script defer src="../scripts/popup.min.js"></script>
+    <script defer src="../scripts/rotation.min.js"></script>
   </body>
 </html>
