--- a/study-of-webgl/works/cube.html
+++ b/study-of-webgl/works/cube.html
@@ -29,8 +29,8 @@
     <link rel="icon" type="image/png" href="../images/icon-192x192.png">
     <!-- style -->
     <link href="../styles/reset.min.css" rel="stylesheet">
-    <link href="../styles/index.css" rel="stylesheet">
-    <link href="../styles/works.css" rel="stylesheet">
+    <link href="../styles/index.min.css" rel="stylesheet">
+    <link href="../styles/works.min.css" rel="stylesheet">
     <title>Toshiya Marukubo | Study of WebGL | Cube</title>
   </head>
   <body>
@@ -105,9 +105,9 @@
       </div><!-- end header -->
     </div><!-- end body-container -->
     <script defer src="../scripts/three.min.js"></script>
-    <script defer src="../scripts/loading.js"></script>
-    <script defer src="../scripts/fullscreen.js"></script>
-    <script defer src="../scripts/popup.js"></script>
-    <script defer src="../scripts/cube.js"></script>
+    <script defer src="../scripts/loading.min.js"></script>
+    <script defer src="../scripts/fullscreen.min.js"></script>
+    <script defer src="../scripts/popup.min.js"></script>
+    <script defer src="../scripts/cube.min.js"></script>
   </body>
 </html>
