--- a/study-of-webgl/works/monument.html
+++ b/study-of-webgl/works/monument.html
@@ -29,8 +29,8 @@
     <link rel="icon" type="image/png" href="../images/icon-192x192.png">
     <!-- style -->
     <link href="../styles/reset.min.css" rel="stylesheet">
-    <link href="../styles/index.css" rel="stylesheet">
-    <link href="../styles/works.css" rel="stylesheet">
+    <link href="../styles/index.min.css" rel="stylesheet">
+    <link href="../styles/works.min.css" rel="stylesheet">
     <title>Toshiya Marukubo | Study of WebGL | Monument</title>
   </head>
   <body style="background: #084C4A">
@@ -114,11 +114,11 @@
         </div><!-- end header-container -->
       </div><!-- end header -->
     </div><!-- end body-container -->
-    <script defer src="../scripts/alert.js"></script>
+    <script defer src="../scripts/alert.min.js"></script>
     <script defer src="../scripts/three.min.js"></script>
-    <script defer src="../scripts/loading.js"></script>
-    <script defer src="../scripts/fullscreen.js"></script>
-    <script defer src="../scripts/popup.js"></script>
-    <script defer src="../scripts/monument.js"></script>
+    <script defer src="../scripts/loading.min.js"></script>
+    <script defer src="../scripts/fullscreen.min.js"></script>
+    <script defer src="../scripts/popup.min.js"></script>
+    <script defer src="../scripts/monument.min.js"></script>
   </body>
 </html>
