--- a/study-of-webgl/works/rotation.html
+++ b/study-of-webgl/works/rotation.html
@@ -18,7 +18,7 @@
     <meta property="og:site_name" content="Toshiya Marukubo | Study of WebGL">
     <meta property="og:url" content="https://toshiya-marukubo.github.io/study-of-webgl/works/rotation.html">
     <meta property="og:title" content="Toshiya Marukubo | Study of WebGL | Rotation">
-    <meta property="og:image" content="../images/og-home.png">
+    <meta property="og:image" content="https://toshiya-marukubo.github.io/study-of-webgl/images/og-home.png">
     <meta property="og:description" content="Study of WebGL">
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
