--- a/study-of-webgl/index.html
+++ b/study-of-webgl/index.html
@@ -29,7 +29,7 @@
     <link rel="icon" type="image/png" href="./images/icon-192x192.png">
     <!-- style -->
     <link href="./styles/reset.min.css" rel="stylesheet">
-    <link href="./styles/index.min.css" rel="stylesheet">
+    <link href="./styles/index.css" rel="stylesheet">
     <title>Toshiya Marukubo | Study of WebGL</title>
   </head>
   <body>
