--- a/study-of-webgl/works/breathing.html
+++ b/study-of-webgl/works/breathing.html
@@ -29,8 +29,8 @@
     <link rel="icon" type="image/png" href="../images/icon-192x192.png">
     <!-- style -->
     <link href="../styles/reset.min.css" rel="stylesheet">
-    <link href="../styles/index.min.css" rel="stylesheet">
-    <link href="../styles/works.min.css" rel="stylesheet">
+    <link href="../styles/index.css" rel="stylesheet">
+    <link href="../styles/works.css" rel="stylesheet">
     <title>Toshiya Marukubo | Study of WebGL | Breathing</title>
   </head>
   <body>
