--- a/study-of-webgl/index.html
+++ b/study-of-webgl/index.html
@@ -30,6 +30,7 @@
     <!-- style -->
     <link href="./styles/reset.min.css" rel="stylesheet">
     <link href="./styles/index.css" rel="stylesheet">
+    <script>console.log('Hi, I\'m Toshiya Marukubo')</script>
     <title>Toshiya Marukubo | Study of WebGL</title>
   </head>
   <body>
