--- a/study-of-webgl/index.html
+++ b/study-of-webgl/index.html
@@ -29,8 +29,8 @@
     <link rel="icon" type="image/png" href="./images/icon-192x192.png">
     <!-- style -->
     <link href="./styles/reset.min.css" rel="stylesheet">
-    <link href="./styles/index.css" rel="stylesheet">
-    <script>console.log('Hi, I\'m Toshiya Marukubo')</script>
+    <link href="./styles/index.min.css" rel="stylesheet">
+    <script>console.log('Hi, I\'m Toshiya Marukubo. Nice to meet you:)')</script>
     <title>Toshiya Marukubo | Study of WebGL</title>
   </head>
   <body>
