--- a/study-of-webgl/works/noisy.html
+++ b/study-of-webgl/works/noisy.html
@@ -29,8 +29,9 @@
     <link rel="icon" type="image/png" href="../images/icon-192x192.png">
     <!-- style -->
     <link href="../styles/reset.min.css" rel="stylesheet">
-    <link href="../styles/index.css" rel="stylesheet">
-    <link href="../styles/works.css" rel="stylesheet">
+    <link href="../styles/index.min.css" rel="stylesheet">
+    <link href="../styles/works.min.css" rel="stylesheet">
+    <script>console.log('Hi, I\'m Toshiya Marukubo. Nice to meet you:)')</script>
     <title>Toshiya Marukubo | Study of WebGL | Noisy</title>
   </head>
   <body>
