--- a/study-of-webgl/index.html
+++ b/study-of-webgl/index.html
@@ -101,6 +101,22 @@
         <div class="main-container">
           <div class="works">
             <div class="image">
+              <a href="./works/tender.html">
+                <img class="progress" src="./images/tender-dammy.png" data-src="./images/tender.png" alt="tender image" width="682" height="482">
+                <div class="overlay">
+                  <span class="view">View</span>
+                </div>
+              </a>
+            </div><!-- end image -->
+            <ol>
+              <li class="title">
+                <a href="./works/tender.html">Tender</a>
+              </li>
+              <li class="date">Created Jan 31, 2022</li>
+            </ol>
+          </div><!-- end works -->
+          <div class="works">
+            <div class="image">
               <a href="./works/amorphous.html">
                 <img class="progress" src="./images/amorphous-dammy.png" data-src="./images/amorphous.png" alt="amorphous image" width="682" height="482">
                 <div class="overlay">
