--- a/study-of-webgl/works/erosion.html
+++ b/study-of-webgl/works/erosion.html
@@ -16,8 +16,8 @@
     <!-- Open Graph Protocol -->
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Toshiya Marukubo | Study of WebGL">
-    <meta property="og:url" content="https://toshiya-marukubo.github.io/study-of-webgl/works/tender.html">
-    <meta property="og:title" content="Toshiya Marukubo | Study of WebGL | Tender">
+    <meta property="og:url" content="https://toshiya-marukubo.github.io/study-of-webgl/works/erosion.html">
+    <meta property="og:title" content="Toshiya Marukubo | Study of WebGL | Erosion">
     <meta property="og:image" content="https://toshiya-marukubo.github.io/study-of-webgl/images/og-home.png">
     <meta property="og:description" content="Study of WebGL">
     <!-- Twitter Card -->
@@ -32,9 +32,9 @@
     <link href="../styles/index.min.css" rel="stylesheet">
     <link href="../styles/works.min.css" rel="stylesheet">
     <script>console.log('Hi, I\'m Toshiya Marukubo. Nice to meet you:)')</script>
-    <title>Toshiya Marukubo | Study of WebGL | Tender</title>
+    <title>Toshiya Marukubo | Study of WebGL | Erosion</title>
   </head>
-  <body style="background: #D7D6DA">
+  <body style="background: #FFF0A6">
     <div class="loading">
       <div class="circle"></div>
     </div><!-- end loading -->
@@ -43,8 +43,8 @@
         <div class="header-container">
           <h1><a href="../index.html">TM</a></h1>
           <div class="works-description">
-            <h2>Tender</h2>
-            <p>Jan 30, 2022</p>
+            <h2>Erosion</h2>
+            <p>Feb 01, 2022</p>
           </div><!-- works-description -->
           <div class="question">
             <a href="#" role="button">
@@ -57,17 +57,12 @@
           </div><!-- end question -->
           <div class="what" aria-live="assertive">
             <h3>What's this?</h3>
-            <p>I saw a great article before so I made this.</p>
+            <p>Bit operation probably not supported with webgl(1.0). so I made it with canvas image data.</p>
             <h4>References</h4>
             <ol>
               <li>
-                <a href="https://towardsdatascience.com/fun-with-html-canvas-lets-make-lava-lamp-plasma-e4b0d89fe778" target="_blank" rel="noopener">
-                  How to make colors.
-                </a>
-              </li>
-              <li>
-                <a href="https://www.youtube.com/watch?v=8K5wJeVgjrM&t=615s" target="_blank" rel="noopener">
-                  YouTube | Mr.Yuri Artyukh - About getting mouse cursor speed.
+                <a href="https://twitter.com/aemkei/status/1378106731386040322" target="_blank" rel="noopener">
+                  How to do bit operation.
                 </a>
               </li>
             </ol>
@@ -77,8 +72,8 @@
             </ol>
             <h4>Code</h4>
             <ol>
-              <li><a href="https://codepen.io/toshiya-marukubo/pen/JjOYmxG" target="_blank" rel="noopener">CodePen</a></li>
-              <li><a href="https://github.com/toshiya-marukubo/toshiya-marukubo.github.io/tree/main/study-of-webgl/org-src/scripts/tender.js">GitHub</a></li>
+              <li><a href="https://codepen.io/toshiya-marukubo/pen/KKyVOpw" target="_blank" rel="noopener">CodePen</a></li>
+              <li><a href="https://github.com/toshiya-marukubo/toshiya-marukubo.github.io/tree/main/study-of-webgl/org-src/scripts/erosion.js">GitHub</a></li>
             </ol>
             <div class="close">
               <a href="#" role="button">
@@ -91,9 +86,9 @@
           </div><!-- end what -->
           <div class="nav">
             <ul>
-              <li class="prev"><a href="./erosion.html"><span aria-label="Previous Page"><</span></a></li>
-              <li class="cur">#016</li>
-              <li class="next"><a href="./amorphous.html"><span aria-label="Next Page">></span></a></li>
+              <li class="prev"><a href="#" class="disabled"><span aria-label="Previous Page"><</span></a></li>
+              <li class="cur">#017</li>
+              <li class="next"><a href="./tender.html"><span aria-label="Next Page">></span></a></li>
             </ul>
           </div><!-- end nav -->
           <div class="back">
@@ -114,6 +109,6 @@
     <script defer src="../scripts/loading.min.js"></script>
     <script defer src="../scripts/fullscreen.min.js"></script>
     <script defer src="../scripts/popup.min.js"></script>
-    <script defer src="../scripts/tender.min.js"></script>
+    <script defer src="../scripts/erosion.min.js"></script>
   </body>
 </html>
