--- a/index.html
+++ b/index.html
@@ -1,14 +1,6 @@
 <!doctype html>
 <html lang="en" prefix="og: http://ogp.me/ns#">
   <head>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-149600281-2"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-        gtag('config', 'UA-149600281-2');
-    </script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Is this my site?">
@@ -29,6 +21,14 @@
     <!-- style -->
     <link href="./styles/common.css" rel="stylesheet">
     <link href="./styles/index.css" rel="stylesheet">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-149600281-2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'UA-149600281-2');
+    </script>
     <title>Toshiya Marukubo | Is this my site?</title>
   </head>
   <body>
@@ -48,7 +48,7 @@
       <div class="main">
         <nav>
           <h2>Hi there. I'm Toshiya Marukubo.</h2>
-          <h3>I make trash with trash code for people.</h3>
+          <h3>I make trash with trash code for me.</h3>
           <ul>
             <li>
               <a href="https://twitter.com/toshiyamarukubo">
@@ -92,6 +92,14 @@
                   <path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"></path>
                   <line x1="10" y1="11" x2="10" y2="17"></line>
                   <line x1="14" y1="11" x2="14" y2="17"></line>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="./study-of-webgl/index.html">
+                <svg role="img" aria-label="study of webgl image" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-book-open">
+                  <path d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"></path>
+                  <path d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"></path>
                 </svg>
               </a>
             </li>
