--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       </div>
       <!-- main-->
       <footer>
-        <p><small>&amp;copy; Toshiya Marukubo</small></p>
+        <p><small>@Toshiya Marukubo</small></p>
       </footer>
     </div>
     <script defer src="./dist/js/index.bundle.js"></script>
