--- a/study-of-webgl/index.html
+++ b/study-of-webgl/index.html
@@ -10,7 +10,7 @@
     <meta property="og:site_name" content="Toshiya Marukubo | Study of WebGL">
     <meta property="og:url" content="https://toshiya-marukubo.github.io/study-of-webgl/">
     <meta property="og:title" content="Toshiya Marukubo | Study of WebGL">
-    <meta property="og:image" content="https://toshiya-marukubo.github.io/og-home.png">
+    <meta property="og:image" content="https://toshiya-marukubo.github.io/dist/assets/images/study-of-webgl/og-home.png">
     <meta property="og:description" content="Study of WebGL">
     <!-- Twitter Card-->
     <meta name="twitter:card" content="summary_large_image">
@@ -87,7 +87,7 @@
       <!-- end main-->
       <footer>
         <div class="footer-container">
-          <p><small>&amp;copy; Toshiya Marukubo</small></p>
+          <p><small>@Toshiya Marukubo</small></p>
         </div>
         <!-- end footer-container-->
       </footer>
