created menger sponge and builded.

--- a/study-of-webgl/works/erosion.html
+++ b/study-of-webgl/works/erosion.html
@@ -72,7 +72,7 @@
         </div>
         <div class="nav">
           <ul>
-            <li class="prev"><a href="./137-5.html"><span aria-label="Previous Page">&lt;</span></a></li>
+            <li class="prev"><a href="./menger.html"><span aria-label="Previous Page">&lt;</span></a></li>
             <li class="cur">#017</li>
             <li class="next"><a href="./tender.html"><span aria-label="Next Page">&gt;</span></a></li>
           </ul>
