--- a/dailymotion/days/2.html
+++ b/dailymotion/days/2.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="../../dist/css/dailymotion-index.bundle.css" rel="stylesheet">
+    <script>console.log('(*^^)v');</script>
     <title>Day-2</title>
   </head>
   <body>
