--- a/dailymotion/index.html
+++ b/dailymotion/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="../dist/css/dailymotion-index.bundle.css" rel="stylesheet">
+    <script>console.log('(*^^)v');</script>
     <title>#dailymotion</title>
   </head>
   <body>
@@ -13,6 +14,7 @@
     <div class="container">
       <div class="container-inner">
         <h1>#dailymotion</h1>
+        <p><a href="https://github.com/toshiya-marukubo/toshiya-marukubo.github.io/tree/main/src/scripts/pages/dailymotion/days">Source Code</a></p>
         <ul>
           <li><a class="call" href="./days/2.html">Day-2</a></li>
           <li><a class="call" href="./days/1.html">Day-1</a></li>
