--- a/dailymotion/index.html
+++ b/dailymotion/index.html
@@ -16,6 +16,7 @@
         <h1>#dailymotion</h1>
         <p><a href="https://github.com/toshiya-marukubo/toshiya-marukubo.github.io/tree/main/src/scripts/pages/dailymotion/days">Source Code</a></p>
         <ul>
+          <li><a class="call" href="./days/4.html">Day-4</a></li>
           <li><a class="call" href="./days/3.html">Day-3</a></li>
           <li><a class="call" href="./days/2.html">Day-2</a></li>
           <li><a class="call" href="./days/1.html">Day-1</a></li>
