--- a/dailymotion/index.html
+++ b/dailymotion/index.html
@@ -7,7 +7,7 @@
     <script>console.log('(*^^)v');</script>
     <title>#dailymotion</title>
   </head>
-  <body>
+  <body class="preload">
 <div class="loading">
   <div class="circle"></div>
 </div>
@@ -16,6 +16,7 @@
         <h1>#dailymotion</h1>
         <p><a href="https://github.com/toshiya-marukubo/toshiya-marukubo.github.io/tree/main/src/scripts/pages/dailymotion/days">Source Code</a></p>
         <ul>
+          <li><a class="call" href="./days/6.html">Day-6</a></li>
           <li><a class="call" href="./days/5.html">Day-5</a></li>
           <li><a class="call" href="./days/4.html">Day-4</a></li>
           <li><a class="call" href="./days/3.html">Day-3</a></li>
