--- a/dailymotion/days/4.html
+++ b/dailymotion/days/4.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="../../dist/css/dailymotion-index.bundle.css" rel="stylesheet">
-    <script>console.log('(*^^)v');</script>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link href="../../dist/css/dailymotion-index.bundle.css" rel="stylesheet">
+<script>console.log('(*^^)v');</script>
     <title>Day-4</title>
   </head>
-  <body>
+  <body class="preload">
 <div class="loading">
   <div class="circle"></div>
 </div>
