--- a/dailymotion/days/6.html
+++ b/dailymotion/days/6.html
@@ -7,7 +7,7 @@
 <script>console.log('(*^^)v');</script>
     <title>Day-6</title>
   </head>
-  <body class="preload">
+  <body>
 <div class="loading">
   <div class="circle"></div>
 </div>
