--- a/dailymotion/index.html
+++ b/dailymotion/index.html
@@ -7,7 +7,7 @@
     <script>console.log('(*^^)v');</script>
     <title>#dailymotion</title>
   </head>
-  <body class="preload">
+  <body>
 <div class="loading">
   <div class="circle"></div>
 </div>
