--- a/dailymotion/index.html
+++ b/dailymotion/index.html
@@ -16,6 +16,7 @@
         <h1>#dailymotion</h1>
         <p><a href="https://github.com/toshiya-marukubo/toshiya-marukubo.github.io/tree/main/src/scripts/pages/dailymotion/days">Source Code</a></p>
         <ul>
+          <li><a class="call" href="./days/9.html">Day-9</a></li>
           <li><a class="call" href="./days/8.html">Day-8</a></li>
           <li><a class="call" href="./days/7.html">Day-7</a></li>
           <li><a class="call" href="./days/6.html">Day-6</a></li>
