--- a/dailymotion/index.html
+++ b/dailymotion/index.html
@@ -16,6 +16,7 @@
         <h1>#dailymotion</h1>
         <p><a href="https://github.com/toshiya-marukubo/toshiya-marukubo.github.io/tree/main/src/scripts/pages/dailymotion/days">Source Code</a></p>
         <ul>
+          <li><a class="call" href="./days/13.html">Day-13</a></li>
           <li><a class="call" href="./days/12.html">Day-12</a></li>
           <li><a class="call" href="./days/11.html">Day-11</a></li>
           <li><a class="call" href="./days/10.html">Day-10</a></li>
