--- a/dailymotion/index.html
+++ b/dailymotion/index.html
@@ -16,6 +16,7 @@
         <h1>#dailymotion</h1>
         <p><a href="https://github.com/toshiya-marukubo/toshiya-marukubo.github.io/tree/main/src/scripts/pages/dailymotion/days">Source Code</a></p>
         <ul>
+          <li><a class="call" href="./days/20.html">Day-20</a></li>
           <li><a class="call" href="./days/19.html">Day-19</a></li>
           <li><a class="call" href="./days/18.html">Day-18</a></li>
           <li><a class="call" href="./days/17.html">Day-17</a></li>
