--- a/dailymotion/index.html
+++ b/dailymotion/index.html
@@ -16,6 +16,7 @@
         <h1>#dailymotion</h1>
         <p><a href="https://github.com/toshiya-marukubo/toshiya-marukubo.github.io/tree/main/src/scripts/pages/dailymotion/days">Source Code</a></p>
         <ul>
+          <li><a class="call" href="./days/24.html">Day-24</a></li>
           <li><a class="call" href="./days/23.html">Day-23</a></li>
           <li><a class="call" href="./days/22.html">Day-22</a></li>
           <li><a class="call" href="./days/21.html">Day-21</a></li>
