--- a/dailymotion/index.html
+++ b/dailymotion/index.html
@@ -16,6 +16,7 @@
         <h1>#dailymotion</h1>
         <p><a href="https://github.com/toshiya-marukubo/toshiya-marukubo.github.io/tree/main/src/scripts/pages/dailymotion/days">Source Code</a></p>
         <ul>
+          <li><a class="call" href="./days/28.html">Day-28</a></li>
           <li><a class="call" href="./days/27.html">Day-27</a></li>
           <li><a class="call" href="./days/26.html">Day-26</a></li>
           <li><a class="call" href="./days/25.html">Day-25</a></li>
