--- a/dailymotion/index.html
+++ b/dailymotion/index.html
@@ -14,6 +14,7 @@
     <div class="container">
       <div class="container-inner">
         <h1>#dailymotion</h1>
+        <h2>Updated May 15, 2022 to June 21, 2022.</h2>
         <p><a href="https://github.com/toshiya-marukubo/toshiya-marukubo.github.io/tree/main/src/scripts/pages/dailymotion/days">Source Code</a></p>
         <ul>
           <li><a class="call" href="./days/29.html">Day-29</a></li>
