--- a/dailymotion/days/4.html
+++ b/dailymotion/days/4.html
@@ -9,7 +9,11 @@
   </head>
   <body>
 <div class="loading">
-  <div class="circle"></div>
+  <div class="rect-container">
+    <div class="rect rect-1"></div>
+    <div class="rect rect-2"></div>
+    <div class="rect rect-3"></div>
+  </div>
 </div>
     <div class="title">
       <p>Day-4</p>
