create awards dirs

--- a/dailymotion/index.html
+++ b/dailymotion/index.html
@@ -21,6 +21,7 @@
         <h2>Updated May 15, 2022 to June 21, 2022.</h2>
         <p><a href="https://github.com/toshiya-marukubo/toshiya-marukubo.github.io/tree/main/src/scripts/pages/dailymotion/days">Source Code</a></p>
         <ul>
+          <li><a class="call" href="./days/30.html">Day-30</a></li>
           <li><a class="call" href="./days/29.html">Day-29</a></li>
           <li><a class="call" href="./days/28.html">Day-28</a></li>
           <li><a class="call" href="./days/27.html">Day-27</a></li>
