--- a/awards/index.html
+++ b/awards/index.html
@@ -14,6 +14,11 @@
     <p class="counter" id="js-counter">000%</p>
   </div>
 </div>
+<header>
+  <div class="header-container">
+    <h1>TITLE</h1>
+  </div>
+</header>
     </div>
     <script src="../dist/js/awards.bundle.js"></script>
   </body>
